# zata-agent

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE.md  Makefile  README.md  pyproject.toml
config/: dummy.toml  qwen.toml  trump.toml
data/processed/: trump.parquet
data/raw/: trump.parquet
models/qwen2.5-0.5b-instruct_trump/: README.md  adapter_config.json  tokenizer_config.json
src/zata/: __main__.py
src/zata/cli/: __init__.py  scrape.py
src/zata/configs/: credentials.py
src/zata/data/pipelines/: __init__.py  nodes.py
src/zata/data/posts/: __init__.py
src/zata/data/scrapers/: __init__.py
src/zata/data/scrapers/x/: __init__.py
src/zata/envs/: credentials.py
src/zata/model/: args.py  constants.py  inference.py  trainer.py  utils.py
src/zata/models/: __init__.py
